--- a/index.html
+++ b/index.html
@@ -33,8 +33,18 @@
             </div>
             <div = id="game_foreground"></div>
             <div = id="game_ui">
-                <img src="https://img.freepik.com/free-vector/heart_53876-25531.jpg?w=740&t=st=1676381829~exp=1676382429~hmac=0978f3dda718386feedbfd8af46c5bfc91fe4b18b6f963a686b2cce9dc6ff548">
+                <div>
+                    <img src="images/hjerte.avif">
+                </div>
+                <div>
+                    <img src="images/timer.webp">
+                </div>
+                <div>
+                    <img src="images/score.png">
+                </div>
+                
             </div>
+
         </div>
     
     </div>
