--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
                 <div>
                     <img id="score" src="images/score.png">
                 </div>
+                <div>
+                    <img id="hjerte" src="images/hjerte.png">
+                </div>
         
                 
             </div>
