--- a/index.html
+++ b/index.html
@@ -18,8 +18,23 @@
                     <img id="cola" src="images/cola.png">
                 </div>
 
+                <div id="APC1" class="falling">
+                    <img id="cola" src="images/cola.png">
+                </div>
+
+                <div id="APC1" class="falling">
+                    <img id="cola" src="images/cola.png">
+                </div>
 
                 <div id="øl1_container" class="falling">
+                    <img id="øl" src="images/øl.png">
+                </div>
+
+                <div id="øl2_container" class="falling">
+                    <img id="øl" src="images/øl.png">
+                </div>
+
+                <div id="øl3_container" class="falling">
                     <img id="øl" src="images/øl.png">
                 </div>
 
@@ -27,29 +42,41 @@
                     <img id="fanta" src="images/fanta.png">
                 </div>
 
+                <div id="fanta2_container" class="falling">
+                    <img id="fanta" src="images/fanta.png">
+                </div>
+
+                <div id="fanta3_container" class="falling">
+                    <img id="fanta" src="images/fanta.png">
+                </div>
+
+                <div id="bærbar_container" class="falling">
+                    <img id="bærbar" src="images/bærbar.png">
+                </div>
+                
             </div>
             <div = id="game_foreground"></div>
 
             <div id="game_ui">
 
-                <div>
+                <div id="scoreboard" class="pulse">
                     <img id="score" src="images/score.png">
                 </div>
+
+                <div id="timer_container">
+                    <img id="timer" src="images/timer.png" class="glow">
+                </div>
                 
-                 <div id="hjerte1_container">
+                 <div id="hjerte1_container" class="pulse"> 
                     <img id="hjerte1_sprite" src="images/hjerte.png">
                 </div>
 
-                 <div id="hjerte2_container">
+                 <div id="hjerte2_container" class="pulse"> 
                     <img id="hjerte2_sprite" src="images/hjerte.png">
                 </div>
 
-                 <div id="hjerte3_container">
+                 <div id="hjerte3_container" class="pulse"> 
                     <img id="hjerte3_sprite" src="images/hjerte.png">
-                </div>
-
-                <div>
-                    <img class="timer" src="images/timer.png">
                 </div>
 
             </div>
