--- a/index.html
+++ b/index.html
@@ -15,16 +15,16 @@
             </div>
             <div id="game_elements">
     
-                <div id="APC1" class="falling">
-                    <img id="cola" src="images/cola.png">
+                <div id="cola1_container" class="falling">
+                    <img id="cola1" src="images/cola.png">
                 </div>
 
-                <div id="APC1" class="falling">
-                    <img id="cola" src="images/cola.png">
+                <div id="cola2_container" class="falling">
+                    <img id="cola2" src="images/cola.png">
                 </div>
 
-                <div id="APC1" class="falling">
-                    <img id="cola" src="images/cola.png">
+                <div id="cola3_container" class="falling">
+                    <img id="cola3" src="images/cola.png">
                 </div>
 
                 <div id="beer1_container" class="falling">
@@ -32,27 +32,27 @@
                 </div>
 
                 <div id="beer2_container" class="falling">
-                    <img id="øl" src="images/øl.png">
+                    <img id="øl2" src="images/øl.png">
                 </div>
 
                 <div id="beer3_container" class="falling">
-                    <img id="øl" src="images/øl.png">
+                    <img id="øl3" src="images/øl.png">
                 </div>
 
                 <div id="fanta1_container" class="falling">
-                    <img id="fanta" src="images/fanta.png">
+                    <img id="fanta1" src="images/fanta.png">
                 </div>
 
                 <div id="fanta2_container" class="falling">
-                    <img id="fanta" src="images/fanta.png">
+                    <img id="fanta2" src="images/fanta.png">
                 </div>
 
                 <div id="fanta3_container" class="falling">
-                    <img id="fanta" src="images/fanta.png">
+                    <img id="fanta3" src="images/fanta.png">
                 </div>
 
                 <div id="laptop_container" class="falling">
-                    <img id="bærbar" src="images/bærbar.png">
+                    <img id="laptop" src="images/bærbar.png">
                 </div>
                 
             </div>
