--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
             </div>
             <div id="game_elements">
     
-                <div id="cola1_container" class="falling">
+                <div id="cola1_container" class="moveright">
                     <img id="cola1" src="images/cola.png">
                 </div>
 
-                <div id="cola2_container" class="falling">
+                <div id="cola2_container" class="moveright">
                     <img id="cola2" src="images/cola.png">
                 </div>
 
-                <div id="cola3_container" class="falling">
+                <div id="cola3_container" class="moveright">
                     <img id="cola3" src="images/cola.png">
                 </div>
 
@@ -60,8 +60,8 @@
 
             <div id="game_ui">
 
-                <div id="scoreboard" class="pulse">
-                    <img id="score" src="images/score.png">
+                <div id="scoreboard_container" class="pulse">
+                    <!--<img id="scoreboard" src="images/score.png" style="height: 100px; width: 100px;">-->
                 </div>
 
                 <div id="timer_container">
