--- a/index.html
+++ b/index.html
@@ -53,13 +53,13 @@
                 <div id="timer_container">
                     <img id="timer_sprite" src="images/timer.png" class="glow">
                 </div>
-                 <div id="heart1_container" class="pulse"> 
+                 <div id="heart_container1" class="pulse"> 
                     <img id="heart1_sprite" src="images/hjerte.png">
                 </div>
-                 <div id="heart2_container" class="pulse"> 
+                 <div id="heart_container2" class="pulse"> 
                     <img id="heart2_sprite" src="images/hjerte.png">
                 </div>
-                 <div id="heart3_container" class="pulse"> 
+                 <div id="heart_container3" class="pulse"> 
                     <img id="heart3_sprite" src="images/hjerte.png">
                 </div>
                 <div id="start" class="hidden"></div>
