--- a/index.html
+++ b/index.html
@@ -62,12 +62,12 @@
                  <div id="heart_container3" class="pulse"> 
                     <img id="heart3_sprite" src="images/hjerte.png">
                 </div>
-                <div id="start" class="hidden"></div>
-                <div id="game_over"class="hidden"></div>
+            </div>
+            <div id="start" class="hidden"></div>
+                <div id="game_over"class="hidde"></div>
                     <h2>GAME OVER</h2>
                 <div id="level_complete" class="hidden"></div>
-                    <h2>LEVEL COMPLETE</h2> 
-            </div>
+                    <h2>LEVEL COMPLETE</h2>
         </div>
     </div>
 </body>
