--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <div id="beer3_container" class="falling">
                     <img id="beer3_sprite" src="images/øl.png">
                 </div>
-                <div id="fanta1_container">
+                <div id="fanta1_container" class="falling">
                     <img id="fanta1_sprite" src="images/fanta.png">
                 </div>
                 <div id="fanta2_container" class="falling">
@@ -53,13 +53,13 @@
                 <div id="timer_container">
                     <img id="timer_sprite" src="images/timer.png" class="glow">
                 </div>
-                 <div id="heart_container1" class="pulse"> 
+                 <div id="heart1_container" class="pulse"> 
                     <img id="heart1_sprite" src="images/hjerte.png">
                 </div>
-                 <div id="heart_container2" class="pulse"> 
+                 <div id="heart2_container" class="pulse"> 
                     <img id="heart2_sprite" src="images/hjerte.png">
                 </div>
-                 <div id="heart_container3" class="pulse"> 
+                 <div id="heart3_container" class="pulse"> 
                     <img id="heart3_sprite" src="images/hjerte.png">
                 </div>
             </div>
