--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             </div>
                 <div id="game_over" class="hidden">
                     <h2>GAME OVER... Pis...</h2>
-                    <p>Du fik kun <span id=game_over_points">x</span> points!</p>
+                    <p>Du fik kun <span id="game_over_points">x</span> points!</p>
                     <p>Du skal opnå 10 points.</p>
                     <button id="button_restart" class="pulse">Restart Game</button>
                 </div>
