--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           </div>
         </div>
         <div id="game_ui">
-          <div id="scoreboard_container">
+          <div id="scoreboard_container"> Score
             <span id="score_count">0</span>
           </div>
           <div id="heart1_container" class="pulse">
@@ -65,18 +65,18 @@
         </div>
         <div id="start">
           <h2>Velkommen til Guldbar-spillet :))</h2>
-          <p>Kan du samle 15 points før tiden løber ud?</p>
+          <p> Du er ankommet til fredagsbaren på KEA, og du vil gerne være en god studerende. I dette spil mister man point ved at drikke sodavand, men får point hvis man drikker øl og samler bærbarer ind. Kan du samle 15 points før tiden løber ud?</p>
           <button id="button_start" class="pulse">Start</button>
         </div>
         <div id="game_over" class="hidden">
           <h2>GAME OVER... Pis...</h2>
-          <p>Du fik kun <span id="game_over_points">x</span> points!</p>
-          <p>Du skal opnå 15 points.</p>
+          <p>Du fik kun <span id="game_over_points">x</span> point!</p>
+          <p>Du skal opnå 15 points, vil du prøve igen?</p>
           <button id="button_restart" class="pulse">Restart Game</button>
         </div>
         <div id="level_complete" class="hidden">
           <h2>LEVEL COMPLETE! Hvor er du god!</h2>
-          <p>Tillykke! Du fik <span id="level_complete_points">x</span> points!</p>
+          <p>Tillykke! Du fik <span id="level_complete_points">x</span> point!</p>
           <button id="button_go_to_start" class="pulse">Go to start</button>
         </div>
       </div>
